make thumbnails stop flickering

--- a/css/black.css
+++ b/css/black.css
@@ -127,7 +127,7 @@ margin-right: 10px;
 
 #container{
 	margin-top: 50px;
-	padding-bottom: 180px;
+	padding-bottom: 30px;
 }
 
 #gallery{
@@ -153,13 +153,16 @@ margin-right: 10px;
 }
 
 #placeholder{
-	margin-bottom: 86px;
+	margin-bottom: 91px;
 	width: 60%;
 }
 
 #speedbar{
-	float:left;
+	text-align: center;
+	padding-bottom: 170px;
 }
+
+
 
 #rightcolumn{
 	width: 60%;
